syntax = "proto3";

package psrpc;
option go_package = "github.com/livekit/psrpc/protoc-gen-psrpc/options";

import "google/protobuf/descriptor.proto";

extend google.protobuf.MethodOptions {
  optional Options options = 2198;
}

message Options {
  // For RPCs, each client request will receive a response from every server.
  // For subscriptions, every client will receive every update.
  bool multi = 1;

  // This method is a pub/sub.
  bool subscription = 2;

  // This method uses topics.
  bool topics = 3;

  TopicParamOptions topic_params = 4;

  // Your service will supply an affinity function for handler selection.
  bool affinity_func = 5;

  // The method uses bidirectional streaming.
  bool stream = 6;

  // Requests load balancing is provided by a pub/sub server queue
  bool queue = 7;
}

message TopicParamOptions {
  // The rpc can be registered/deregistered atomically with other group members
  string group = 1;

  // The topic is composed of one or more string-like parameters.
  repeated string names = 2;

  // The topic parameters have associated string-like type parameters
  bool typed = 3;

  // At most one server will be registered for each topic
  bool single_server = 4;
}
